apps/homelab/asustor/asustor.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: asustor
---
apiVersion: v1
kind: Service
metadata:
  name: asustor
  namespace: asustor
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: asustor
  # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  name: asustor-1
  labels:
    kubernetes.io/service-name: asustor
addressType: IPv4
ports:
  - name: http 
    appProtocol: http
    protocol: TCP
    port: 9000
endpoints:
  - addresses:
      - "192.168.4.124"
