apps/homelab/asustor/asustor-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asustor
  namespace: asustor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "^/plexmediaserver") {
        return 308 https://plex.abbottland.io$request_uri;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: asustor.local.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: asustor
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - asustor.local.abbottland.io
    secretName: asustor-tls
